manifests/default/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  labels:
    app: vikunja
spec:
  type: LoadBalancer
  ports:
  - port: 3456
    targetPort: 3456
  selector:
    app: vikunja
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja-db
  labels:
    app: vikunja
spec:
  type: LoadBalancer
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: vikunja
