manifests/default/vikunja/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`todo.senk0.com`)
    priority: 10
    services:
    - kind: Service
      name: vikunja
      namespace: default
      passHostHeader: true
      port: 3456
  tls:
    secretName: senk0
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja-http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`todo.senk0.com`)
    priority: 10
    services:
    - kind: Service
      name: vikunja
      namespace: default
      passHostHeader: true
      port: 3456
